# cosmos

./: .gitignore  README.md  pyproject.toml
src/causedms/: __init__.py
src/causedms/adapt_grid/grid/: __init__.py  grid.py  grid_margin.py
src/causedms/adapt_grid/model_comparator/: elpd_pairwise.py
src/causedms/dms_data/: dms_data.py  plot.py
src/causedms/likelihood/: likelihood.py
src/causedms/likelihood/double/: __init__.py  double.py
src/causedms/model_analyzer/: model_analyzer.py
src/causedms/model_builder/: model_builder.py  model_loglik.py
src/causedms/model_comparator/: elpd_pairwise.py
src/causedms/prior_factory/: __init__.py  plot.py  prior_factory.py  prior_generator.py
src/cosmos/: __init__.py  adjust_text.py  plot.py
src/cosmos/adapt_grid/grid/: grid.py
src/cosmos/dms_data/: dms_data.py
src/cosmos/model_analyzer/: model_analyzer.py  plot.py
src/cosmos/model_builder/: model_builder.py
src/cosmos/model_comparator/: elpd_pairwise.py
src/cosmos/prior_factory/: prior_factory.py  prior_generator.py
src/cosmos/simulator/: __init__.py  simulator.py
vignette/: 00_dms_data.ipynb  01_prior_factory.ipynb  02_model_analyzer.ipynb  03_simulator.ipynb
